[tool.poetry]
name = "exercises-sf"
version = "0.1.0"
description = ""
authors = ["jabooticaba <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.9"
lxml = "^4.6.3"
beautifulsoup4 = "^4.9.3"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
